--- a/sagemath/Dockerfile
+++ b/sagemath/Dockerfile
@@ -4,15 +4,19 @@ MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 
 ENV SAGE_VERSION 6.7
 
+# Better use of fonts-extra
 RUN apk -U --no-progress upgrade \
  && apk -U --no-progress add \
     sudo curl \
-    tar m4 bzip2 make patch perl-ExtUtils-MakeMaker python git \
-    gcc gcc-c++ gcc-gfortran libgfortran \
-    openssl-devel readline-devel \
-    pango-devel cairo-devel \
-    dejavu-sans-fonts dejavu-serif-fonts dejavu-sans-mono-fonts vlgothic-fonts \
-    ImageMagick
+    tar m4 bzip2 make patch perl-extutils-makemaker python git \
+    gcc g++ gfortran libgfortran \
+    openssl-dev readline-dev \
+    pango-dev cairo-dev \
+    fonts-extra	ttf-dejavu \
+    imagemagick
+ && rm /var/cache/apk/*
+#dejavu-sans-fonts dejavu-serif-fonts dejavu-sans-mono-fonts vlgothic-fonts
+
 
 #TODO 
 # - add cheksum control
