--- a/sagemath/Dockerfile
+++ b/sagemath/Dockerfile
@@ -9,9 +9,8 @@ ENV SAGE_VERSION 6.7
 
 # Better use of fonts-extra
 RUN echo "@testing http://dl-4.alpinelinux.org/alpine/edge/testing" | tee -a /etc/apk/repositories \
- && apk update \
  && apk -U --no-progress upgrade \
- && apk -U --no-progress add \
+ && apk -U --force --no-progress add \
     ca-certificates sudo curl \
     tar m4 bzip2 make patch perl-extutils-makemaker@testing python git \
     gcc g++ gfortran libgfortran \
