--- a/sagemath/Dockerfile
+++ b/sagemath/Dockerfile
@@ -17,7 +17,7 @@ RUN echo "@testing http://dl-4.alpinelinux.org/alpine/edge/testing" | tee -a /et
     openssl-dev readline-dev \
     pango-dev cairo-dev \
     fonts-extra@testing ttf-dejavu \
-    imagemagick
+    imagemagick \
  && rm /var/cache/apk/*
 #dejavu-sans-fonts dejavu-serif-fonts dejavu-sans-mono-fonts vlgothic-fonts
 
