--- a/hubic/Dockerfile
+++ b/hubic/Dockerfile
@@ -3,12 +3,18 @@
 FROM alpine:latest
 MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 
-# hubicfuse installation
+# hubicfuse dep installation
 RUN echo "http://dl-4.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories \
  && echo "http://dl-4.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories \
  && echo "http://dl-4.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories \
  && apk -U --no-progress upgrade \
  && apk -U --force --no-progress add \
-    ca-certificates gcc make fuse-devel curl-devel libxml2-devel \
-    openssl-devel json-c-devel file-devel \
+    ca-certificates gcc g++ make git \
+    libssl1.0 json-c-dev file-dev fuse-dev curl-dev libxml2-dev \
  && rm /var/cache/apk/*
+
+# Compilation
+RUN git clone --depth 1 https://github.com/TurboGit/hubicfuse.git && cd hubicfuse \
+    && ./configure && make && make install \
+    && /usr/bin/install -c hubic_token /usr/local/bin/hubic_token \
+    && cd .. && rm -rf hubicfuse
