--- a/mirror/ubuntu/Dockerfile
+++ b/mirror/ubuntu/Dockerfile
@@ -2,8 +2,12 @@
 FROM alpine:latest
 MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 
+# $RSYNCSOURCE The source mirror near you which supports rsync on
+# https://launchpad.net/ubuntu/+archivemirrors
+# rsync://<iso-country-code>.rsync.archive.ubuntu.com/ubuntu should always work
+# $BASEDIR Define where you want the mirror-data to be on your mirror
+# Could use in release mode SYNCMODE="releases" with RSYNCSOURCE="rsync://rsync.releases.ubuntu.com/releases" BASEDIR="/var/www/ubuntureleases/"
 ENV SYNCMODE="archive" RSYNCSOURCE="rsync://rsync.archive.ubuntu.com/ubuntu" BASEDIR="/var/www/ubuntuarchive/"
-# Could use in release mode SYNCMODE="releases" with RSYNCSOURCE="rsync://rsync.releases.ubuntu.com/releases"
 
 COPY start.sh /
 
