--- a/sagemath/Dockerfile
+++ b/sagemath/Dockerfile
@@ -30,8 +30,8 @@ USER sagemath
 RUN cd /app \
  && curl -Lso /app/sage-${SAGE_VERSION}.tar.gz http://www-ftp.lip6.fr/pub/math/sagemath/src/sage-${SAGE_VERSION}.tar.gz \
  && md5sum sage-${SAGE_VERSION}.tar.gz \
- && tar xvf /app/sage-${SAGE_VERSION}.tar.gz \
- && ls && cd sage-${SAGE_VERSION} && make \
+ && tar xf /app/sage-${SAGE_VERSION}.tar.gz \
+ && ls && cd sage-${SAGE_VERSION} && make --silent \
  && rm /app/sage-${SAGE_VERSION}.tar.gz
 
 #TODO find wherre file are located
