--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -5,9 +5,12 @@ MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 #UID et GID can be set at run time to change in relation with the host 
 ENV BASEDIR="/var/www",UID="33",GID="33"
 
-RUN apk -U --no-progress upgrade \
+RUN  echo "http://dl-4.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories \
+ && echo "http://dl-4.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories \
+ && echo "http://dl-4.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories \
+ && apk -U --no-progress upgrade \
  && apk -U --force --no-progress add \
-    ca-certificates php-fpm php-cli php-zip php-gd shadow \
+    ca-certificates php-fpm php-cli php-zip php-gd shadow@testing \
  && addgroup -S www-data && adduser -S -H -h ${BASEDIR} -G www-data www-data \
  && mkdir ${BASEDIR} && chown www-data:www-data ${BASEDIR} \
  && sed --in-place s/user\ =\ nobody/user\ =\ www-data/g /etc/php/php-fpm.conf \
