--- a/php/Dockerfile.rpi
+++ b/php/Dockerfile.rpi
@@ -3,7 +3,7 @@ FROM hypriot/rpi-alpine-scratch
 MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 
 #UID et GID can be set at run time to change in relation with the host 
-ENV BASEDIR="/var/www",UID="33",GID="33"
+ENV BASEDIR="/var/www" UID="33" GID="33"
 
 RUN  echo "http://dl-4.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories \
  && echo "http://dl-4.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories \
@@ -21,5 +21,6 @@ RUN  echo "http://dl-4.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositorie
 VOLUME ${BASEDIR} 
 WORKDIR ${BASEDIR}
 EXPOSE 9000
-ENTRYPOINT ["/usr/sbin/groupmod -g $GID www-data && /usr/sbin/usermod -u $UID -g $GID www-data && /usr/bin/php-fpm "]
-CMD [" -F -e -i"]
+
+ENTRYPOINT /usr/sbin/groupmod -g $GID www-data && /usr/sbin/usermod -u $UID -g $GID www-data && /usr/bin/php-fpm 
+CMD  -F -e -i
