--- a/owncloud/Dockerfile.rpi
+++ b/owncloud/Dockerfile.rpi
@@ -27,9 +27,9 @@ RUN apk -U --force --no-progress upgrade \
 
 #Coudl add php-pdo_pgsql php-pdo_mysql \
 
-EXPOSE 80
+#EXPOSE 80
 WORKDIR $WORKDIR
 VOLUME $WORKDIR/data $WORKDIR/config
 
-ENTRYPOINT /usr/sbin/groupmod -g $GID www-data && /usr/sbin/usermod -u $UID -g $GID www-data && chown -R www-data:www-data . && /usr/bin/php -S 0.0.0.0:80 -t $WORKDIR
-CMD []
+#ENTRYPOINT /usr/sbin/groupmod -g $GID www-data && /usr/sbin/usermod -u $UID -g $GID www-data && chown -R www-data:www-data . && /usr/bin/php -S 0.0.0.0:80 -t $WORKDIR
+#CMD []
