--- a/ssh-tunnel/Dockerfile
+++ b/ssh-tunnel/Dockerfile
@@ -6,18 +6,14 @@ FROM alpine:latest
 MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 
 RUN echo "http://dl-4.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories \
- && apk --no-cache --no-progress add tinyssh shadow \
- &&  useradd --shell /bin/false --create-home --user-group tunnel \
- && /usr/sbin/tinysshd-makekey /etc/tinysshd
+ && apk --no-cache --no-progress add openssh shadow \
+ && useradd --shell /bin/false --create-home --user-group tunnel \
+ && printf "\nMatch User tunnel\nAllowTcpForwarding yes\nX11Forwarding no\n" >> /etc/ssh/sshd_config \
+ && printf "\nChallengeResponseAuthentication no\nPasswordAuthentication no\nUsePAM no\n" >> /etc/ssh/sshd_config
 
 VOLUME ["/home/tunnel/.ssh/"] 
 #Mount add authorized_keys in it.
 
 EXPOSE 22
 
-ENTRYPOINT ["/usr/sbin/tinysshd"]
-
-CMD ["-v","/etc/tinysshd"]
-
-#To reset server key : docker exec -it tinysshd "rm -Rf /etc/tinysshd && /usr/sbin/tinysshd-makekey /etc/tinysshd"
-# and restart
+CMD ["/usr/sbin/sshd", "-D"]
