--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -5,18 +5,18 @@ MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 #UID et GID can be set at run time to change in relation with the host 
 ENV BASEDIR="/var/www",UID="33",GID="33"
 
-RUN  echo "http://dl-4.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories \
- && echo "http://dl-4.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories \
- && echo "http://dl-4.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories \
- && apk -U --no-progress upgrade \
- && apk -U --force --no-progress add \
+#Install php and deps (+ add testing repo)
+RUN  echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories \
+ && apk -U  --no-cache --no-progress upgrade \
+ && apk -U  --no-cache --force --no-progress add \
     ca-certificates php-fpm php-cli php-zip php-gd shadow \
- && addgroup -S www-data && adduser -S -H -h ${BASEDIR} -G www-data www-data \
+    
+#Configure
+RUN addgroup -S www-data && adduser -S -H -h ${BASEDIR} -G www-data www-data \
  && mkdir ${BASEDIR} && chown www-data:www-data ${BASEDIR} \
  && sed --in-place s/user\ =\ nobody/user\ =\ www-data/g /etc/php/php-fpm.conf \
  && sed --in-place s/group\ =\ nobody/group\ =\ www-data/g /etc/php/php-fpm.conf \
  && sed --in-place s/listen\ =\ 127.0.0.1:9000/listen\ =\ 0.0.0.0:9000/g /etc/php/php-fpm.conf \
- && rm /var/cache/apk/*
 
 VOLUME ${BASEDIR} 
 WORKDIR ${BASEDIR}
