--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,5 +1,5 @@
 # A docker file to run php-fpm server behind nginx or other frontend
-FROM alpine:latest 
+FROM alpine:edge 
 MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 
 #UID et GID can be set at run time to change in relation with the host 
@@ -7,10 +7,10 @@ ENV BASEDIR="/var/www",UID="33",GID="33"
 
 #Install php and deps (+ add testing repo)
 RUN  echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories \
- && apk --no-progress upgrade --no-cache\
+ && echo "http://dl-cdn.alpinelinux.org/alpine/v3.3/main" >> /etc/apk/repositories \
+ && apk --no-progress upgrade --no-cache \
  && apk --no-progress add --no-cache ca-certificates \
     php-fpm php-cli php-zip php-gd shadow 
-    
 #Configure
 RUN addgroup -S www-data && adduser -S -H -h ${BASEDIR} -G www-data www-data \
  && mkdir ${BASEDIR} && chown www-data:www-data ${BASEDIR} \
