--- a/php/Dockerfile.rpi
+++ b/php/Dockerfile.rpi
@@ -18,8 +18,8 @@ RUN  echo "http://dl-4.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositorie
  && sed --in-place s/listen\ =\ 127.0.0.1:9000/listen\ =\ 0.0.0.0:9000/g /etc/php/php-fpm.conf \
  && rm /var/cache/apk/*
 
-VOLUME ${BASEDIR} 
-WORKDIR ${BASEDIR}
+VOLUME /var/www
+WORKDIR /var/www
 EXPOSE 9000
 
 ENTRYPOINT /usr/sbin/groupmod -g $GID www-data && /usr/sbin/usermod -u $UID -g $GID www-data && /usr/bin/php-fpm -F -e -i
